--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.9",
     "axios": "^0.25.0",
     "miragejs": "^0.1.43",
+    "plop": "^3.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
@@ -24,7 +25,8 @@
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "gen": "yarn plop --plopfile generators/plopfile.js"
   },
   "eslintConfig": {
     "extends": [
