--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "axios": "^0.25.0",
     "miragejs": "^0.1.43",
     "plop": "^3.0.5",
+    "polished": "^4.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
@@ -47,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.20"
   }
 }
